--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "utils.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "truffle test"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/ejwessel/GanacheTimeTraveler/issues"
   },
-  "homepage": "https://github.com/ejwessel/GanacheTimeTraveler#readme"
+  "homepage": "https://github.com/ejwessel/GanacheTimeTraveler#readme",
+  "dependencies": {
+    "ganache-cli": "^6.5.0",
+    "truffle": "5.0.28"
+  }
 }
