set up yarn and ganache

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "utils.js",
   "scripts": {
     "test": "truffle test"
+    "ganache": "ganache-cli -d"
   },
   "repository": {
     "type": "git",
