--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           command: yarn
       - run:
           name: Test
-          command: ganache-cli -d > /dev/null & sleep 10 && yarn test
+          command: yarn ganache > /dev/null & sleep 10 && yarn test
 workflows:
   version: 2
   build_and_test:
