--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "utils.js",
   "scripts": {
-    "test": "truffle test"
+    "test": "truffle test",
     "ganache": "ganache-cli -d"
   },
   "repository": {
