--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ganache-time-traveler",
-  "version": "1.0.10",
-  "description": "",
+  "version": "1.0.11",
+  "description": "A testing toolset that allows developers to write unit tests for the Ethereum blockchain.",
   "main": "utils.js",
   "scripts": {
     "test": "truffle test",
